--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "router": "^1.3.8",
+    "vue": "^2.7.14"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
