--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "router": "^1.3.8",
-    "vue": "^2.7.14"
+    "vue": "^2.7.14",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
